--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,6 +8,7 @@ dataSources:
     source:
       address: "0x8bCE48D5FA610e39555A151308CcCA87B253fb23"
       abi: NecoNFT
+      startBlock: 15848870
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
