update neco nft abi

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
+    "auth": "graph auth --product hosted-service 456d6d4482ea4ec5940c63744bf3b540",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ neco-fun/neco-fun-nft",
     "create-local": "graph create --node http://localhost:8020/ neco-fun/neco-fun-nft",
     "remove-local": "graph remove --node http://localhost:8020/ neco-fun/neco-fun-nft",
