--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.25.3",
-    "@graphprotocol/graph-ts": "0.24.1"
+    "@graphprotocol/graph-ts": "^0.26.0"
   }
 }
